--- a/.github/workflows/deploy_preview.yml
+++ b/.github/workflows/deploy_preview.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build-and-deploy:
-    if: github.ref == 'refs/heads/main'
+    if: github.ref_name == 'main' || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     permissions:
       contents: read
