feat: update configuration and add verification files
- Modified .gitignore to exclude additional file types
- Updated next.config.mjs to disable trailing slashes and prevent redirects
- Added postbuild script in package.json for serving JSON
- Added serve.json configuration for clean URLs and directory listing

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "npx serve@latest out",
+    "postbuild": "cp serve.json out/serve.json",
     "lint:md": "npx markdownlint-cli2 '**/*.md' '#node_modules' '#.github'",
     "lint:links": "node check-links.js",
     "semantic-release": "semantic-release",
