--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "next": "^15.4.5",
     "node-fetch": "^3.3.2",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "schema-dts": "^1.1.5"
   },
   "devDependencies": {
     "@semantic-release/github": "^11.0.3",
