--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "25.0.3",
     "markdownlint-cli": "^0.47.0",
     "markdownlint-cli2": "^0.20.0",
+    "node-fetch": "^3.3.2",
     "typescript": "5.9.3"
   }
 }
